Saving blend-files straight to server nets 0.5% speed of a windows file copy to the same location #69206

Closed
opened 2019-08-27 12:08:14 +02:00 by Wouter Vandenneucker · 13 comments

System Information
Operating system: Windows 10 (client), Ubuntu 18.04 (client), Windows Server 2019 (server)
Graphics card: GTX 1080 TI, Intel integrated Graphics 4000

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
This is a crosspost of a question I asked at Blender Stackexchange . More specific information and context can be found there.

In short, copying a 2.2GB blend file to a windows share through explorer takes 23s (765Mbps) on our Gigabit network.
Saving the same file to the same share location directly from blender takes +5000s (<3.5Mbps).
The process of saving in itself when writing to the internal SSD takes 4 seconds.

I tried this to multiple shares (albeit on the same server) and from different (wired) clients.

Technically it works, it does save the file, it's just not usable as it is and prevents us from having a better workflow.

Exact steps for others to reproduce the error

  • Take any blendfile with a considerable size
  • Try to save to a Windows share
  • Wait for the process to complete
**System Information** Operating system: Windows 10 (client), Ubuntu 18.04 (client), Windows Server 2019 (server) Graphics card: GTX 1080 TI, Intel integrated Graphics 4000 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** This is a crosspost of a question I asked at [Blender Stackexchange ](https://blender.stackexchange.com/questions/149926/saving-blend-files-straight-to-server-nets-0-5-speed-of-a-windows-file-copy-ho). More specific information and context can be found there. In short, copying a 2.2GB blend file to a windows share through explorer takes 23s (765Mbps) on our Gigabit network. Saving the same file to the same share location directly from blender takes +5000s (<3.5Mbps). The process of saving in itself when writing to the internal SSD takes 4 seconds. I tried this to multiple shares (albeit on the same server) and from different (wired) clients. Technically it works, it does save the file, it's just not usable as it is and prevents us from having a better workflow. **Exact steps for others to reproduce the error** - Take any blendfile with a considerable size - Try to save to a Windows share - Wait for the process to complete

Added subscriber: @WouterVandenneucker

Added subscriber: @WouterVandenneucker

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos

Some comments on this: I don't think it is 2.8 related, 2.79 and previous were equally slow.

I noticed in the past that saving directly to a USB connected thumb drive can also be very slow. My guess is this has something to do with the way Blender saves files, not necessarily to network or 2.8 specifically.

Some comments on this: I don't think it is 2.8 related, 2.79 and previous were equally slow. I noticed in the past that saving directly to a USB connected thumb drive can also be very slow. My guess is this has something to do with the way Blender saves files, not necessarily to network or 2.8 specifically.

Indeed, I just tested in 2.8 to confirm the issue is still there.

Indeed, I just tested in 2.8 to confirm the issue is still there.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2019-08-29 11:27:17 +02:00

that is almost certainly because copying the file from windows file browser will result in a single write operation of 2.2GB. Blender writes small chunks of memory at a time (among other reasons, to avoid having to store GB's of binary file in RAM...), so on such a big file it most likely will result in thousands of write commands. there are most certainly ways to setup your remote shared drive in a way that those get packed together, but that is really not a Blender bug or issue. This is sysadmin work to find a proper solution here, if you want direct random read/write on a remote storage.

that is almost certainly because copying the file from windows file browser will result in a single write operation of 2.2GB. Blender writes small chunks of memory at a time (among other reasons, to avoid having to store GB's of binary file in RAM...), so on such a big file it most likely will result in thousands of write commands. there are most certainly ways to setup your remote shared drive in a way that those get packed together, but that is really not a Blender bug or issue. This is sysadmin work to find a proper solution here, if you want direct random read/write on a remote storage.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

I wouldn't say that this is for sysadmin to work out; the 2.2GB file was to even out network delays. Writing any blender project bigger than that standard cube to the network is problematic at this point.

If 2.8 is supposed to be used in production by real studios, direct writing to external filesystems is a real use case in a normal workflow.
Take any other professional software suite, be it an Adobe program, an Autodesk program, Solidworks,... they all handle writing to the network as it's supposed to. Even for +GB filesizes.
It's not a job of a sysadmin to find a way around the programs poor handling of write ops; at least not if the aim is to be a professional software suite.

Even with linking and a proper setup, writing a file of 25MB takes an excessive amount of time to be practical for any professional work.
I can solve this easily by having an rsync tool in the background that uploads everything to right folder, that is besides the point.

Blender should either handle writes to external sources properly or prohibit writing to it as a whole. Having the UI locked for +10 minutes is a definite no-no whichever way you look at it!

I wouldn't say that this is for sysadmin to work out; the 2.2GB file was to even out network delays. Writing any blender project bigger than that standard cube to the network is problematic at this point. If 2.8 is supposed to be used in production by real studios, direct writing to external filesystems is a real use case in a normal workflow. Take any other professional software suite, be it an Adobe program, an Autodesk program, Solidworks,... they all handle writing to the network as it's supposed to. Even for +GB filesizes. It's not a job of a sysadmin to find a way around the programs poor handling of write ops; at least not if the aim is to be a professional software suite. Even with linking and a proper setup, writing a file of 25MB takes an excessive amount of time to be practical for any professional work. I can solve this easily by having an rsync tool in the background that uploads everything to right folder, that is besides the point. Blender should either handle writes to external sources properly or prohibit writing to it as a whole. Having the UI locked for +10 minutes is a definite no-no whichever way you look at it!

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

We do not have control over where you write a file> Improvements are always possible, but that is a feature request then, not a bug, and it has nothing to do on this tracker... Also please do not reopen tasks, triaging is to be done by developers, not users.

We do not have control over where you write a file> Improvements are always possible, but that is a feature request then, not a bug, and it has nothing to do on this tracker... Also please do not reopen tasks, triaging is to be done by developers, not users.

Added subscriber: @RobertS

Added subscriber: @RobertS

In #69206#765020, @mont29 wrote:
that is almost certainly because copying the file from windows file browser will result in a single write operation of 2.2GB. Blender writes small chunks of memory at a time (among other reasons, to avoid having to store GB's of binary file in RAM...), so on such a big file it most likely will result in thousands of write commands. there are most certainly ways to setup your remote shared drive in a way that those get packed together, but that is really not a Blender bug or issue. This is sysadmin work to find a proper solution here, if you want direct random read/write on a remote storage.

I see this as well, because we have trouble with speeds over VPN at work. Interestingly, though when exporting a .glb file from Blender, I get the "full" 80mpbs write speed. Only when doing save in the native .blend format do I get 4mbps.

Interestingly, I've measured similar slow save times in other 3D apps, but when I imported the glb into a large Powerpoint presentation and saved that, it also saved at full speed...

> In #69206#765020, @mont29 wrote: > that is almost certainly because copying the file from windows file browser will result in a single write operation of 2.2GB. Blender writes small chunks of memory at a time (among other reasons, to avoid having to store GB's of binary file in RAM...), so on such a big file it most likely will result in thousands of write commands. there are most certainly ways to setup your remote shared drive in a way that those get packed together, but that is really not a Blender bug or issue. This is sysadmin work to find a proper solution here, if you want direct random read/write on a remote storage. I see this as well, because we have trouble with speeds over VPN at work. Interestingly, though when exporting a .glb file from Blender, I get the "full" 80mpbs write speed. Only when doing save in the native .blend format do I get 4mbps. Interestingly, I've measured similar slow save times in other 3D apps, but when I imported the glb into a large Powerpoint presentation and saved that, it also saved at full speed...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69206
No description provided.