Blendfile write: Avoid splitting big, multi-Mb buffers too much on disk write.

While for memfile (undo) write small-ish chunks are necessary to help
with deduplication accross undo steps, when writing on disk, splitting
multi-Mb buffers into 1Mb chunks is not necessarily optimal.

The main goal of this change is to address slowness when writing Gb
blendfiles through network in some cases, see #69206 and #143735.